@@ -1324,7 +1324,7 @@ Kuznesov Yury <yury@newst.net>
 Daniel Manfis <dany_100@yahoo.com>
 Massimo Pichini <massimo@webbridges.it>
 Eyal Neuman <eyal@tradertools.com>
-
+Peter Phillips <pphillip@opentext.com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson in the early 1990's.  Paul devised the recursive Makefile
