@@ -1003,12 +1003,12 @@ ACE_OS_String::strsncpy (char *dst, const char *src, size_t maxlen)
 
   if (rmaxlen > 0)
     {
-      *rdst = '\0'; 
+      *rdst = '\0';
       if (rsrc != 0)
-        strncat (rdst, rsrc, --rmaxlen);  
+        strncat (rdst, rsrc, --rmaxlen);
     }
   return dst;
-};
+}
 
 #if defined (ACE_HAS_WCHAR)
 wchar_t *
@@ -1020,9 +1020,9 @@ ACE_OS_String::strsncpy (wchar_t *dst, const wchar_t *src, size_t maxlen)
 
   if (rmaxlen > 0)
     {
-      *rdst = ACE_TEXT_WIDE ('\0'); 
+      *rdst = ACE_TEXT_WIDE ('\0');
       if (rsrc != 0)
-        strncat (rdst, rsrc ,--rmaxlen);  
+        strncat (rdst, rsrc ,--rmaxlen);
     }
   return dst;
 }
